plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}

repositories {
	flatDir {
		dirs "libs"
	}
	maven {
		name = "Shedaniel"
		url = "https://maven.shedaniel.me"
	}
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"zombie-infection" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}
}

// Opt-in regression tests run in an isolated server and are never packaged in the mod JAR.
if (project.hasProperty("gametest")) {
	fabricApi {
		configureTests {
			createSourceSet = true
			modId = "zombie-infection-tests"
			enableGameTests = true
			enableClientGameTests = false
			clearRunDirectory = false
		}
	}
	loom.runs.gameTest.vmArg "-Dfabric-api.gametest.report-file=${layout.buildDirectory.file('gametest-results.xml').get().asFile}"
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.officialMojangMappings()
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
	def smartBrainLib = modImplementation "local.smartbrainlib:SmartBrainLib-fabric-1.21.8-${project.smartbrainlib_source_version.substring(0, 7)}:${project.smartbrainlib_version}"
	include smartBrainLib

	modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
	if (!project.hasProperty("withoutRei")) {
		modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
	}
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	def projectName = project.name
	inputs.property "projectName", projectName

	from("LICENSE") {
		rename { "${it}_$projectName"}
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	repositories {
	}
}
